fixing height when there is a too long description

--- a/webapp/src/assets/scss/components/repo-item.scss
+++ b/webapp/src/assets/scss/components/repo-item.scss
@@ -1,6 +1,6 @@
 .repo-item {
   width: 838px;
-  height: 141px;
+  min-height: 141px;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
   margin: 32px;
